vpc-eks/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 131131726322.dkr.ecr.us-east-1.amazonaws.com/php-eks:latest
        ports:
        - containerPort: 80
