vpc-eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 131131726322.dkr.ecr.us-east-1.amazonaws.com/flask-eks:latest
        ports:
        - containerPort: 80
